Fix JWT
Hide new token in .env
Fix .toList() to Collect
Remove JacksonConfig